emf-lib-state-machine/src/input_document/snapshots/emf_lib_state_machine__input_document__tests__inputs_with_missing_required_fields.snap
---
source: emf-lib-state-machine/src/input_document/mod.rs
expression: err

---
jobs.add_mds1.steps[0].inputs: missing field `host`
