emf-lib-state-machine/src/input_document/snapshots/emf_lib_state_machine__input_document__tests__with_missing_id.snap
---
source: emf-lib-state-machine/src/input_document/mod.rs
expression: err

---
jobs.deploy_hosts.steps[0]: missing field `id`
