emf-lib-state-machine/src/input_document/snapshots/emf_lib_state_machine__input_document__tests__with_no_defined_action.snap
---
source: emf-lib-state-machine/src/input_document/mod.rs
expression: err

---
jobs.add_mds1.steps[0]: action field not found. action must be present before inputs
