emf-lib-state-machine/src/input_document/snapshots/emf_lib_state_machine__input_document__tests__with_unknown_input.snap
---
source: emf-lib-state-machine/src/input_document/mod.rs
expression: errs

---
jobs.add_mds1.steps[0].inputs.foo: unknown field `foo`, expected one of `host`, `run`, `ssh_opts`
